--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
     <h1>Добро пожаловать на мою домашнюю страницу!</h1>
     <p>Вы можете найти меня в социальных сетях:</p>
     <ul>
-        <li><a href="https://github.com/M23Nono" rel="me">GitHub</a></li>
+        <li>
+            <a href="https://github.com/M23Nono" rel="me">GitHub</a>
+        </li>
         <!-- Добавьте другие социальные сети здесь с атрибутом rel="me" -->
     </ul>
 </body>
