--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <p>Вы можете найти меня в социальных сетях:</p>
     <ul>
         <li>
-            <a href="https://github.com/M23Nono" rel="me">GitHub</a>
+            <a href="https://github.com/Renyestai" rel="me">GitHub</a>
         </li>
         <!-- Добавьте другие социальные сети здесь с атрибутом rel="me" -->
     </ul>
