--- a/index.html
+++ b/index.html
@@ -9,10 +9,11 @@
     <h1>Добро пожаловать на мою домашнюю страницу!</h1>
     <p>Вы можете найти меня в социальных сетях:</p>
     <ul>
-        <li>
-            <a href="https://github.com/M23Nono" rel="me">GitHub</a>
-        </li>
-        <!-- Добавьте другие социальные сети здесь с атрибутом rel="me" -->
+        <li><a href="https://twitter.com/aaronpk" rel="me">@aaronpk on Twitter</a></li>
+        <li><a href="https://github.com/M23Nono" rel="me">GitHub</a></li>
+        <li><a href="mailto:me@example.com" rel="me">me@example.com</a></li>
     </ul>
+    <!-- Добавляем ссылку на открытый PGP ключ -->
+    <a href="/key.txt" rel="pgpkey">PGP Key</a>
 </body>
 </html>
