--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <li><a href="https://github.com/M23Nono" rel="me">GitHub</a></li>
         <li><a href="mailto:me@example.com" rel="me">me@example.com</a></li>
         <li><a href="https://myaccount.google.com/?tab=kk&hl=ru&utm_source=OGB&utm_medium=act" rel="me">Google</a></li>
+        <li><a href="https://twitter.com/Wesavis" rel="me">@Wesavis on Twitter</a></li>
     </ul>
     <!-- Добавляем ссылку на открытый PGP ключ -->
     <a href="/key.txt" rel="pgpkey">PGP Key</a>
